--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.lixiaomi.baselibapplication">
+
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
@@ -40,6 +41,7 @@
 
     <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS" />
 
+    <uses-permission android:name="android.permission.CALL_PHONE"></uses-permission>
 
     <application
         android:name=".application.MyApplication"
@@ -95,6 +97,7 @@
         <activity android:name=".ui.main.TcpClientActivity"></activity>
         <activity android:name=".ui.main.WifiActivity"></activity>
         <activity android:name=".ui.main.ViewPagerTestActivity"></activity>
+        <activity android:name=".ui.main.PermissionsActivity"></activity>
     </application>
 
 </manifest>
