--- a/baselib/src/main/AndroidManifest.xml
+++ b/baselib/src/main/AndroidManifest.xml
@@ -1,2 +1,29 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.lixiaomi.baselib" />
+    package="com.lixiaomi.baselib" >
+
+    <!--网络权限-->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <!--文件读写权限:选择照片，裁剪照片功能使用；网络请求缓存功能使用-->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission>
+    <!--相机：拍照功能使用-->
+    <uses-permission android:name="android.permission.CAMERA"></uses-permission>
+    <!--VISIBILITY_HIDDEN表示不显示任何通知栏提示的权限-->
+    <uses-permission
+        android:name="android.permission.DOWNLOAD_WITHOUT_NOTIFICATION"/>
+    <!--DownloadManager：更新App,下载apk文件使用-->
+    <uses-permission
+        android:name="android.permission.ACCESS_DOWNLOAD_MANAGER"/>
+    <!--8.0未知来源的应用权限 更新App-->
+    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
+
+    <application
+        android:allowBackup="true"
+        android:label="@string/app_name"
+        android:supportsRtl="true">
+
+        <service android:name=".service.DownloadService"></service>
+    </application>
+
+</manifest>
