--- a/baselib/build.gradle
+++ b/baselib/build.gradle
@@ -5,8 +5,8 @@ android {
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 27
-        versionCode 1
-        versionName "1.0"
+        versionCode 4
+        versionName "1.0.4"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
@@ -36,7 +36,6 @@ ext {
     aviLibrary = "2.1.3"
     glide = "4.8.0"
     glideCompiler = "4.8.0"
-    okhttp3_integration = "4.8.0"
     gson = "2.8.5"
     eventbus = "3.1.1"
     easypermissions = "2.0.1"
@@ -70,7 +69,6 @@ dependencies {
     api "com.wang.avi:library:$aviLibrary"
     //glide
     api "com.github.bumptech.glide:glide:$glide"
-    api "com.github.bumptech.glide:okhttp3-integration:$okhttp3_integration"
     annotationProcessor "com.github.bumptech.glide:compiler:$glideCompiler"
     //json解析
     api "com.google.code.gson:gson:$gson"
@@ -300,10 +298,11 @@ artifacts {
     archives sourcesJar
 }
 
+
 //发布到组织名称名字，必须填写
 group = "com.lixiaomi"//groupId
 // 版本号，下次更新是只需要更改版本号即可
-version = "1.0.1"
+version = "1.0.4"
 
 //上传到jcenter
 Properties properties = new Properties()
@@ -322,3 +321,5 @@ bintray {
         publish = true
     }
 }
+//gradlew install 用于将项目编译、打包生成 pom，aar 等文件；
+//gradlew bintrayUpload 用于将生成的 pom，aar 等文件上传至 bintray 仓库中；
