--- a/mvplib/build.gradle
+++ b/mvplib/build.gradle
@@ -7,8 +7,8 @@ android {
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 27
-        versionCode 1
-        versionName "1.0"
+        versionCode 3
+        versionName "1.0.2"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -24,9 +24,11 @@ android {
 }
 
 
+ext {
+    baseLib = "1.0.5"
+}
 
 dependencies {
     api fileTree(dir: 'libs', include: ['*.jar'])
-    api project(path: ':baselib')
-
+    api "com.lixiaomi:baselib:$baseLib"
 }
