--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,6 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
     implementation files('libs/tbs_sdk_thirdapp_v3.2.0.1104_43200_sharewithdownload_withfilereader_withoutGame_obfs_20170609_115346.jar')
     implementation 'commons-codec:commons-codec:1.11'
-    implementation project(path: ':mvplib')
-//    api 'com.lixiaomi:mvplib:1.0.2'
+//    implementation project(path: ':mvplib')
+    api 'com.lixiaomi:mvplib:1.0.4'
 }
